# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import patientsRouter from "./patients";
 import casesRouter from "./cases";
 import scansRouter from "./scans";
 import dashboardRouter from "./dashboard";
+import analysisRouter from "./analysis";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use("/patients", patientsRouter);
 router.use("/cases", casesRouter);
 router.use("/dashboard", dashboardRouter);
 router.use("/", scansRouter);
+router.use("/", analysisRouter);
 
 export default router;
